# package-deploy-CLI

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  entry.py  pyproject.toml  requirements.txt  setup.py
package_deploy.egg-info/: PKG-INFO  SOURCES.txt  dependency_links.txt  entry_points.txt  requires.txt  top_level.txt
