[tool.poetry]
name = "package-deploy"
version = "0.1.0"
description = "An effective way to simplify the process of creating a python package"
authors = ["Dhanush Eashwar <dhanush.eashwar@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
makepkg = 'entry:main'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
