[tool.poetry]
name = "package-deploy"
version = "0.1.0"
description = "An effective way to simplify the process of creating a python package"
authors = ["Dhanush Eashwar <dhanush.eashwar@gmail.com>"]
license = "CDDL"

[tool.poetry.dependencies]
python = "^3.8"
PyInquirer = "^1.0.3"
termcolor = "^1.1.0"
regex = "^2021.10.23"
future = "^0.18.2"
wcwidth = "^0.2.5"
six = "^1.16.0"
Pygments = "^2.10.0"
twine = "^3.4.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
makepkg = '__init__:main'

packages = [
    { include = "package-deploy" }
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
